# patent-fetcher

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
patent_fetcher/: cli.py  constants.py  settings.py
patent_fetcher/clients/: patent_client.py
patent_fetcher/clients/output/: base_client.py  local.py  sqlite.py
patent_fetcher/models/: api.py  output_client.py  patent_client.py  utils.py
tests/: test_api_models.py  test_cli.py  test_client_models.py  test_integration.py  test_output_clients.py  test_patent_client.py
