[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "patent_fetcher"
version = "0.1.0"
description = "Patent fetcher"
readme = "README.md"
authors = [
    { name = "Andrew Law" },
]
requires-python = "^3.13"
dependencies = [
    "requests (>=2.32.4)",
    "click (>=8.2.1)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "poetry-core (>=2.1.3,<3.0.0)"
]

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[project.scripts]
patent_fetcher_cli = "patent_fetcher.cli:cli" # for click style cli
patent_fetcher = "patent_fetcher.cli:patent_fetcher" # for running the example in the readme as-is

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --import-mode=importlib"
testpaths = [
    "tests",
]
